--- a/exceptions.ipynb
+++ b/exceptions.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 59,
    "id": "cec3c41f",
    "metadata": {},
    "outputs": [
@@ -26,7 +26,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The result of the division is 2.0\n"
+      "The result of the division is 1.333\n"
      ]
     }
    ],
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 60,
    "id": "895a9e3e",
    "metadata": {},
    "outputs": [
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": null,
    "id": "7f5e487d",
    "metadata": {},
    "outputs": [
@@ -131,13 +131,7 @@
     }
    ],
    "source": [
-    "dishes = [(\"Ceaser Salad\", True), (\"Carbonara\", False), (\"Welsh Rarebit\"), \n",
-    "          (\"Croque monsieur\", True), (\"Meat_balls\", True), (\"Pizza Margherita\", False) ,\n",
-    "            (\"Pasta al Pesto\", True) , (\"Sate' Ayam\"), (\"Tacos\", False)]\n",
-    "\n",
-    "\n",
-    "\n",
-    "def gluten_free_check(dishes: list[tuple]):\n",
+    "def gluten_free_check(dishes: list[tuple])->None:\n",
     "\n",
     "    for dish in dishes:   \n",
     "    \n",
@@ -156,7 +150,10 @@
     "        except Exception:\n",
     "            print(f\"{dish} --> Information not available\")         \n",
     "   \n",
-    "        \n",
+    "\n",
+    "dishes = [(\"Ceaser Salad\", True), (\"Carbonara\", False), (\"Welsh Rarebit\"), \n",
+    "          (\"Croque monsieur\", True), (\"Meat_balls\", True), (\"Pizza Margherita\", False) ,\n",
+    "            (\"Pasta al Pesto\", True) , (\"Sate' Ayam\"), (\"Tacos\", False)]        \n",
     "\n",
     "\n",
     "gluten_free_check(dishes)"
@@ -167,19 +164,60 @@
    "id": "e895061c",
    "metadata": {},
    "source": [
-    "##### 4. Implement a function that takes a list of strings and converts them to integers. Handle the eventual exceptions that may arise."
+    "##### 4. Implement a function that takes a list of strings and converts them to integers. In case of errors, handle the exceptions and print which strings could not be converted."
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "30b6bffe",
+   "cell_type": "code",
+   "execution_count": 78,
+   "id": "8ddf1630",
    "metadata": {},
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "'0.5' cannot be converted\n",
+      "'abc' cannot be converted\n",
+      "'xyz' cannot be converted\n",
+      "'two' cannot be converted\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'The list of integers is: [10, 20, 30]'"
+      ]
+     },
+     "execution_count": 78,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def convert_integers(numbers: list[str])-> list[int]:\n",
+    "\n",
+    "    list_integers = []\n",
+    "\n",
+    "    for item in numbers:\n",
+    "\n",
+    "        try:\n",
+    "            num = int(item)\n",
+    "            list_integers.append(num)\n",
+    "        except ValueError:\n",
+    "            print(f\"'{item}' cannot be converted\")\n",
+    "\n",
+    "    return(f\"The list of integers is: {list_integers}\")\n",
+    "\n",
+    "list_char = ['10', '0.5', 'abc', '20', 'xyz', '30', 'two']\n",
+    "\n",
+    "convert_integers(list_char)\n"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8ddf1630",
+   "id": "bbb00d73",
    "metadata": {},
    "outputs": [],
    "source": []
