--- a/input_output.ipynb
+++ b/input_output.ipynb
@@ -291,7 +291,7 @@
     "                number = float(input(\"Enter the number, please.\"))\n",
     "                print(f\"The square of {number} is {round((number**2), 2)}.\")\n",
     "            except ValueError:\n",
-    "                print(\"You enter an invalid character.\")\n",
+    "                print(\"You enter an invalid character.\\n\")\n",
     "\n",
     "        elif choice == 2:\n",
     "            print(\"Thanks, see you soon.\")\n",
