--- a/exceptions.ipynb
+++ b/exceptions.ipynb
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 3,
    "id": "895a9e3e",
    "metadata": {},
    "outputs": [
@@ -69,7 +69,6 @@
       "At index 2 there is 'rebel', which is not a number \n",
       "At index 3 we do have an integer: 40\n",
       "At index 4 we do have a float: 4.2\n",
-      "\n",
       "\n",
       "At index 0 we do have an integer: 44\n",
       "At index 1 we do have a float: 0.32\n",
@@ -96,7 +95,7 @@
     "\n",
     "\n",
     "check_list_numbers([10, 20, 'rebel', 40, 4.2])\n",
-    "print(f\"\\n\")\n",
+    "print(f\"\")\n",
     "check_list_numbers([44, 0.32, 78, 91, 1212.34])"
    ]
   },
@@ -169,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 8,
    "id": "8ddf1630",
    "metadata": {},
    "outputs": [
@@ -189,7 +188,7 @@
        "'The list of integers is: [10, 20, 30]'"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -215,9 +214,59 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "0c292f31",
+   "metadata": {},
+   "source": [
+    "##### 5. A function open a file and read its contents. If the file does not exist, handle the exception and print an error message."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "bbb00d73",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The file is not found.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'This shutdown, which began on 1 October, has caused unprecedented disruptions in the country.\\n'"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def read_poem(poem):\n",
+    "\n",
+    "    try:\n",
+    "        with open(poem) as file:\n",
+    "            article = file.readline()\n",
+    "            return article\n",
+    "    except FileNotFoundError:\n",
+    "        print(\"The file is not found.\")\n",
+    "    \n",
+    "file_1 = r\"data.text\"\n",
+    "file_2 = r\"C:\\Users\\zanca\\OneDrive\\Desktop\\new_sample.txt\"\n",
+    "\n",
+    "read_poem(file_1)\n",
+    "read_poem(file_2)\n",
+    "            \n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bbb00d73",
+   "id": "fc8af6fb",
    "metadata": {},
    "outputs": [],
    "source": []
