--- a/exceptions.ipynb
+++ b/exceptions.ipynb
@@ -264,6 +264,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "eee1c1cf",
+   "metadata": {},
+   "source": [
+    "##### 6. Quality check: a function takes a car and its specifications as input. If the specifications are not meet, raise a custom exception. Also, the specifications has to be checked for type errors."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "fc8af6fb",
