--- a/exceptions.ipynb
+++ b/exceptions.ipynb
@@ -268,13 +268,115 @@
    "id": "eee1c1cf",
    "metadata": {},
    "source": [
-    "##### 6. Quality check: a function takes a car and its specifications as input. If the specifications are not meet, raise a custom exception. Also, the specifications has to be checked for type errors."
+    "##### 6. Quality check: a function takes a car and its specifications as input. If the specifications are not meet, raise a custom exception. Also, the specifications has to be checked for value errors.\n",
+    "\n",
+    "car_1 = [\"white\", 4, 2.5, \"Japan]\n",
+    "car_2 = [\"red\", \"four\", 3.0, \"Germany\"]\n",
+    "car_3 = [\"blue\", 4, 2.0, \"USA\"]\n",
+    "car_4 = [\"grey\", 2, 4.0, \"Germany\"]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "fc8af6fb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The color is accepted\n",
+      "The number of doors is accepted\n",
+      "The engine is accepted\n",
+      "\n",
+      "\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "Check the specification 'Nr_doors'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[31], line 57\u001b[0m\n\u001b[0;32m     55\u001b[0m check_car(car_1)\n\u001b[0;32m     56\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m---> 57\u001b[0m \u001b[43mcheck_car\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcar_2\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     58\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m     59\u001b[0m check_car(car_3)\n",
+      "Cell \u001b[1;32mIn[31], line 13\u001b[0m, in \u001b[0;36mcheck_car\u001b[1;34m(car)\u001b[0m\n\u001b[0;32m     11\u001b[0m     \u001b[38;5;28;01mpass\u001b[39;00m\n\u001b[0;32m     12\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m---> 13\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mCheck the specification \u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mNr_doors\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m     15\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(car[\u001b[38;5;241m2\u001b[39m],\u001b[38;5;28mfloat\u001b[39m):\n\u001b[0;32m     16\u001b[0m     \u001b[38;5;28;01mpass\u001b[39;00m\n",
+      "\u001b[1;31mValueError\u001b[0m: Check the specification 'Nr_doors'"
+     ]
+    }
+   ],
+   "source": [
+    "# Our car need to be white or grey(type str), 4 doors(type int), 2.0 engine(type float) or bigger till 3.0, and German(type str)\n",
+    "\n",
+    "def check_car(car: list):    \n",
+    "\n",
+    "    if isinstance(car[0],str):\n",
+    "        pass            \n",
+    "    else:\n",
+    "        raise ValueError(f\"Check the specification 'Color'\")\n",
+    "    \n",
+    "    if isinstance(car[1], int):\n",
+    "        pass\n",
+    "    else:\n",
+    "        raise ValueError(f\"Check the specification 'Nr_doors'\")\n",
+    "    \n",
+    "    if isinstance(car[2],float):\n",
+    "        pass\n",
+    "    else:\n",
+    "        raise ValueError(f\"Check the specification 'Engine'\")\n",
+    "    \n",
+    "    if isinstance(car[3], str):\n",
+    "        pass\n",
+    "    else:\n",
+    "        raise ValueError(f\"Check the specification 'Nation\")\n",
+    "    \n",
+    "    try:\n",
+    "        if car[0] == \"white\" or car[0] == \"grey\":\n",
+    "            print(\"The color is accepted\")\n",
+    "    except Exception:\n",
+    "        print(f\"The color {car[0]} is not accepted.\")\n",
+    "\n",
+    "    try:\n",
+    "        if car[1] == 4:\n",
+    "            print(\"The number of doors is accepted\")\n",
+    "    except Exception:\n",
+    "        print(f\"The number of doors {car[1]} is not accepted.\")\n",
+    "\n",
+    "    try:\n",
+    "        if 2.0 <= car[2] <= 3.0:\n",
+    "            print(\"The engine is accepted\")\n",
+    "    except Exception:\n",
+    "        print(f\"The engine {car[1]} is not accepted.\")\n",
+    "\n",
+    "    try:\n",
+    "        if car[3] == \"Germany\":\n",
+    "            print(\"The Nation specification is accepted\")\n",
+    "    except Exception:\n",
+    "        print(f\"The Nation of the car, {car[1]}, is not accepted.\")\n",
+    "\n",
+    "\n",
+    "car_1 = [\"white\", 4, 2.5, \"Japan\"]\n",
+    "car_2 = [\"red\", \"four\", 3.0, \"Germany\"]\n",
+    "car_3 = [\"grey\", 4, 20, \"USA\"]\n",
+    "car_4 = [\"grey\", 2, 4.0, \"Germany\"]       \n",
+    "\n",
+    "check_car(car_1)\n",
+    "print(\"\\n\")\n",
+    "check_car(car_2)\n",
+    "print(\"\\n\")\n",
+    "check_car(car_3)\n",
+    "print(\"\\n\")\n",
+    "check_car(car_4)\n",
+    "print(\"\\n\")\n",
+    "        \n",
+    "            \n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fc8af6fb",
+   "id": "07f3c6d9",
    "metadata": {},
    "outputs": [],
    "source": []
