--- a/exceptions.ipynb
+++ b/exceptions.ipynb
@@ -268,17 +268,12 @@
    "id": "eee1c1cf",
    "metadata": {},
    "source": [
-    "##### 6. Quality check: a function takes a car and its specifications as input. If the specifications are not meet, raise a custom exception. Also, the specifications has to be checked for value errors.\n",
-    "\n",
-    "car_1 = [\"white\", 4, 2.5, \"Japan]\n",
-    "car_2 = [\"red\", \"four\", 3.0, \"Germany\"]\n",
-    "car_3 = [\"blue\", 4, 2.0, \"USA\"]\n",
-    "car_4 = [\"grey\", 2, 4.0, \"Germany\"]\n"
+    "##### 6. Quality check: a function takes a car and its specifications as input. If the specifications are not meet, raise a custom exception. Also, the specifications has to be checked for value errors.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 45,
    "id": "fc8af6fb",
    "metadata": {},
    "outputs": [
@@ -289,20 +284,30 @@
       "The color is accepted\n",
       "The number of doors is accepted\n",
       "The engine is accepted\n",
+      "The Nation of the car, Japan, is not accepted.\n",
+      "\n",
+      "\n",
+      "ERROR: 'Nr_doors' value has to be 'int'\n",
+      "The color red is not accepted.\n",
+      "The number of doors four is not accepted.\n",
+      "The engine is accepted\n",
+      "The Nation specification is accepted\n",
+      "\n",
+      "\n",
+      "ERROR: 'Engine' value has to be float\n",
+      "ERROR: 'Nation' value has to be 'str'\n",
+      "The color is accepted\n",
+      "The number of doors is accepted\n",
+      "The engine 20 is not accepted.\n",
+      "The Nation of the car, 89, is not accepted.\n",
+      "\n",
+      "\n",
+      "The color is accepted\n",
+      "The number of doors 2 is not accepted.\n",
+      "The engine 4.0 is not accepted.\n",
+      "The Nation specification is accepted\n",
       "\n",
       "\n"
-     ]
-    },
-    {
-     "ename": "ValueError",
-     "evalue": "Check the specification 'Nr_doors'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[31], line 57\u001b[0m\n\u001b[0;32m     55\u001b[0m check_car(car_1)\n\u001b[0;32m     56\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m---> 57\u001b[0m \u001b[43mcheck_car\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcar_2\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     58\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m     59\u001b[0m check_car(car_3)\n",
-      "Cell \u001b[1;32mIn[31], line 13\u001b[0m, in \u001b[0;36mcheck_car\u001b[1;34m(car)\u001b[0m\n\u001b[0;32m     11\u001b[0m     \u001b[38;5;28;01mpass\u001b[39;00m\n\u001b[0;32m     12\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m---> 13\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mCheck the specification \u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mNr_doors\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m     15\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(car[\u001b[38;5;241m2\u001b[39m],\u001b[38;5;28mfloat\u001b[39m):\n\u001b[0;32m     16\u001b[0m     \u001b[38;5;28;01mpass\u001b[39;00m\n",
-      "\u001b[1;31mValueError\u001b[0m: Check the specification 'Nr_doors'"
      ]
     }
    ],
@@ -311,54 +316,60 @@
     "\n",
     "def check_car(car: list):    \n",
     "\n",
-    "    if isinstance(car[0],str):\n",
-    "        pass            \n",
-    "    else:\n",
-    "        raise ValueError(f\"Check the specification 'Color'\")\n",
-    "    \n",
-    "    if isinstance(car[1], int):\n",
-    "        pass\n",
-    "    else:\n",
-    "        raise ValueError(f\"Check the specification 'Nr_doors'\")\n",
-    "    \n",
-    "    if isinstance(car[2],float):\n",
-    "        pass\n",
-    "    else:\n",
-    "        raise ValueError(f\"Check the specification 'Engine'\")\n",
-    "    \n",
-    "    if isinstance(car[3], str):\n",
-    "        pass\n",
-    "    else:\n",
-    "        raise ValueError(f\"Check the specification 'Nation\")\n",
-    "    \n",
-    "    try:\n",
-    "        if car[0] == \"white\" or car[0] == \"grey\":\n",
-    "            print(\"The color is accepted\")\n",
-    "    except Exception:\n",
-    "        print(f\"The color {car[0]} is not accepted.\")\n",
+    "    # check type value\n",
     "\n",
     "    try:\n",
-    "        if car[1] == 4:\n",
-    "            print(\"The number of doors is accepted\")\n",
-    "    except Exception:\n",
+    "        if not isinstance(car[0],str):\n",
+    "            raise ValueError\n",
+    "    except ValueError:\n",
+    "        print(f\"ERROR: 'Color' value has to be 'str'\")\n",
+    "\n",
+    "    try:\n",
+    "        if not isinstance(car[1], int):\n",
+    "            raise ValueError\n",
+    "    except ValueError:\n",
+    "        print(f\"ERROR: 'Nr_doors' value has to be 'int'\")\n",
+    "\n",
+    "    try:\n",
+    "        if not isinstance(car[2],float):\n",
+    "            raise ValueError\n",
+    "    except ValueError:\n",
+    "        print(f\"ERROR: 'Engine' value has to be float\")\n",
+    "\n",
+    "    try:\n",
+    "        if not isinstance(car[3], str):\n",
+    "            raise ValueError\n",
+    "    except ValueError:\n",
+    "        print((f\"ERROR: 'Nation' value has to be 'str'\"))\n",
+    "        \n",
+    "      \n",
+    "    \n",
+    "    # check values\n",
+    "    \n",
+    "    if car[0] == \"white\" or car[0] == \"grey\":\n",
+    "            print(\"The color is accepted\")\n",
+    "    else:\n",
+    "        print(f\"The color {car[0]} is not accepted.\")\n",
+    "    \n",
+    "    if car[1] == 4:\n",
+    "        print(\"The number of doors is accepted\")\n",
+    "    else:\n",
     "        print(f\"The number of doors {car[1]} is not accepted.\")\n",
     "\n",
-    "    try:\n",
-    "        if 2.0 <= car[2] <= 3.0:\n",
-    "            print(\"The engine is accepted\")\n",
-    "    except Exception:\n",
-    "        print(f\"The engine {car[1]} is not accepted.\")\n",
+    "    if 2.0 <= car[2] <= 3.0:\n",
+    "        print(\"The engine is accepted\")\n",
+    "    else:\n",
+    "        print(f\"The engine {car[2]} is not accepted.\")\n",
     "\n",
-    "    try:\n",
-    "        if car[3] == \"Germany\":\n",
-    "            print(\"The Nation specification is accepted\")\n",
-    "    except Exception:\n",
-    "        print(f\"The Nation of the car, {car[1]}, is not accepted.\")\n",
+    "    if car[3] == \"Germany\":\n",
+    "        print(\"The Nation specification is accepted\")\n",
+    "    else:\n",
+    "        print(f\"The Nation of the car, {car[3]}, is not accepted.\")\n",
     "\n",
     "\n",
     "car_1 = [\"white\", 4, 2.5, \"Japan\"]\n",
     "car_2 = [\"red\", \"four\", 3.0, \"Germany\"]\n",
-    "car_3 = [\"grey\", 4, 20, \"USA\"]\n",
+    "car_3 = [\"grey\", 4, 20, 89]\n",
     "car_4 = [\"grey\", 2, 4.0, \"Germany\"]       \n",
     "\n",
     "check_car(car_1)\n",
@@ -368,8 +379,7 @@
     "check_car(car_3)\n",
     "print(\"\\n\")\n",
     "check_car(car_4)\n",
-    "print(\"\\n\")\n",
-    "        \n",
+    "print(\"\\n\")       \n",
     "            \n"
    ]
   },
