--- a/oops.ipynb
+++ b/oops.ipynb
@@ -358,37 +358,109 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 33,
-   "id": "89881c69",
+   "cell_type": "markdown",
+   "id": "f35c2484",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "a/b = 2\n",
-      "We are in else block \n"
-     ]
-    }
-   ],
    "source": [
-    "try:\n",
-    "    a = 4\n",
-    "    b = 2\n",
-    "    c = a / b\n",
-    "    print(\"a/b = %d\" % c)\n",
-    "\n",
-    "except ZeroDivisionError:\n",
-    "    print(\"Can't divide by zero\")\n",
-    "else:\n",
-    "    print(\"We are in else block \")"
+    "##### 9. Create a class Student, with attributes like name, ID(random), and grades and average grade. Then create a class exams that inherits from student its ID and add the new grades from the exams to the student grades. The grades of the exams are input given by the user. Student also has a method that calculates the average grade from all the grades (initial grades + exam grades) and updates the average grade attribute."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "f8d66ed8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Student name: Selman\n",
+      "Studend ID:17611\n",
+      "Grades: None\n",
+      "\n",
+      "Student name: Loete\n",
+      "Studend ID:17611\n",
+      "Grades: None\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "import random\n",
+    "\n",
+    "\n",
+    "class Student():\n",
+    "\n",
+    "    def __init__ (self, name:str):\n",
+    "\n",
+    "        self.name = name\n",
+    "        self.grades = []\n",
+    "\n",
+    "    \n",
+    "    def __str__(self):\n",
+    "\n",
+    "        return f\"Student name: {self.name}\\nStudend ID:{self.student_id}\\nGrades: {self.grades}\\n\"#GPA: {self.average_grades}\"\n",
+    "    \n",
+    "\n",
+    "    def generate_id(self):\n",
+    "        \n",
+    "        n = random.randint(1,1)\n",
+    "        random.seed(n)\n",
+    "        self.student_id = random.randint(00000,99999)\n",
+    "\n",
+    "\n",
+    "    def enter_grades(self):\n",
+    "        \n",
+    "        grade = int(input(f\"Please enter the result of exam \"))\n",
+    "        self.grades = self.grades.append(grade)\n",
+    "        \n",
+    "\n",
+    "\n",
+    "    def average(self):\n",
+    "                    \n",
+    "        self.average_grades = round((sum(self.grades))/(len(self.grades)),1)\n",
+    "\n",
+    "\n",
+    "\n",
+    "selman = Student(\"Selman\")\n",
+    "selman.generate_id()\n",
+    "selman.enter_grades()\n",
+    "#selman.average()\n",
+    "print(selman)\n",
+    "\n",
+    "loete = Student(\"Loete\")\n",
+    "loete.generate_id()\n",
+    "loete.enter_grades()\n",
+    "#loete.average()\n",
+    "print(loete)\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 140,
+   "id": "c6e4186e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "lim = [3,55,2]\n",
+    "print(len(lim))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cc4c40de",
    "metadata": {},
    "outputs": [],
    "source": []
