--- a/oops.ipynb
+++ b/oops.ipynb
@@ -413,7 +413,7 @@
     "    def enter_grades(self):\n",
     "        \n",
     "        grade = int(input(f\"Please enter the result of exam \"))\n",
-    "        self.grades = self.grades.append(grade)\n",
+    "        self.grades.append(grade)\n",
     "        \n",
     "\n",
     "\n",
