--- a/oops.ipynb
+++ b/oops.ipynb
@@ -375,14 +375,27 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "35\n",
       "Student name: Selman\n",
-      "Studend ID:17611\n",
-      "Grades: None\n",
-      "\n",
-      "Student name: Loete\n",
-      "Studend ID:17611\n",
-      "Grades: None\n",
-      "\n"
+      "Studend ID:83029\n",
+      "Grades: [4]\n",
+      "GPA: 4.0\n",
+      "Student name: Selman\n",
+      "Studend ID:83029\n",
+      "Grades: [4, 3]\n",
+      "GPA: 3.5\n",
+      "Student name: Selman\n",
+      "Studend ID:83029\n",
+      "Grades: [4, 3, 6]\n",
+      "GPA: 4.3\n",
+      "Student name: Selman\n",
+      "Studend ID:83029\n",
+      "Grades: [4, 3, 6, 9]\n",
+      "GPA: 5.5\n",
+      "Student name: Selman\n",
+      "Studend ID:83029\n",
+      "Grades: [4, 3, 6, 9, 7]\n",
+      "GPA: 5.8\n"
      ]
     }
    ],
@@ -396,18 +409,18 @@
     "\n",
     "        self.name = name\n",
     "        self.grades = []\n",
+    "        self.student_id = None\n",
+    "        self.average_grades = None\n",
     "\n",
     "    \n",
     "    def __str__(self):\n",
     "\n",
-    "        return f\"Student name: {self.name}\\nStudend ID:{self.student_id}\\nGrades: {self.grades}\\n\"#GPA: {self.average_grades}\"\n",
+    "        return f\"Student name: {self.name}\\nStudend ID:{self.student_id}\\nGrades: {self.grades}\\nGPA: {self.average_grades}\\n\"\n",
     "    \n",
     "\n",
-    "    def generate_id(self):\n",
-    "        \n",
-    "        n = random.randint(1,1)\n",
-    "        random.seed(n)\n",
-    "        self.student_id = random.randint(00000,99999)\n",
+    "    def generate_id(self):        \n",
+    "             \n",
+    "        self.student_id = random.randint(11111,99999)\n",
     "\n",
     "\n",
     "    def enter_grades(self):\n",
@@ -426,21 +439,38 @@
     "selman = Student(\"Selman\")\n",
     "selman.generate_id()\n",
     "selman.enter_grades()\n",
-    "#selman.average()\n",
+    "selman.average()\n",
+    "print(selman)\n",
+    "selman.enter_grades()\n",
+    "selman.average()\n",
+    "print(selman)\n",
+    "selman.enter_grades()\n",
+    "selman.average()\n",
+    "print(selman)\n",
+    "selman.enter_grades()\n",
+    "selman.average()\n",
+    "print(selman)\n",
+    "selman.enter_grades()\n",
+    "selman.average()\n",
     "print(selman)\n",
     "\n",
-    "loete = Student(\"Loete\")\n",
-    "loete.generate_id()\n",
-    "loete.enter_grades()\n",
+    "\n",
+    "#loete = Student(\"Loete\")\n",
+    "#loete.generate_id()\n",
+    "#loete.enter_grades()\n",
     "#loete.average()\n",
-    "print(loete)\n",
+    "#print(loete)\n",
+    "\n",
+    "#karl = Student(\"Karl\")\n",
+    "#karl.generate_id()\n",
+    "#print(karl)\n",
     "\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 64,
    "id": "c6e4186e",
    "metadata": {},
    "outputs": [
