--- a/oops.ipynb
+++ b/oops.ipynb
@@ -375,27 +375,62 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "35\n",
       "Student name: Selman\n",
-      "Studend ID:83029\n",
+      "Studend ID:28376\n",
       "Grades: [4]\n",
       "GPA: 4.0\n",
+      "\n",
       "Student name: Selman\n",
-      "Studend ID:83029\n",
-      "Grades: [4, 3]\n",
-      "GPA: 3.5\n",
+      "Studend ID:28376\n",
+      "Grades: [4, 4]\n",
+      "GPA: 4.0\n",
+      "\n",
       "Student name: Selman\n",
-      "Studend ID:83029\n",
-      "Grades: [4, 3, 6]\n",
-      "GPA: 4.3\n",
+      "Studend ID:28376\n",
+      "Grades: [4, 4, 7]\n",
+      "GPA: 5.0\n",
+      "\n",
       "Student name: Selman\n",
-      "Studend ID:83029\n",
-      "Grades: [4, 3, 6, 9]\n",
+      "Studend ID:28376\n",
+      "Grades: [4, 4, 7, 6]\n",
+      "GPA: 5.2\n",
+      "\n",
+      "Student name: Selman\n",
+      "Studend ID:28376\n",
+      "Grades: [4, 4, 7, 6, 7]\n",
+      "GPA: 5.6\n",
+      "\n",
+      "Student name: Loete\n",
+      "Studend ID:55736\n",
+      "Grades: [5]\n",
+      "GPA: 5.0\n",
+      "\n",
+      "Student name: Loete\n",
+      "Studend ID:55736\n",
+      "Grades: [5, 6]\n",
       "GPA: 5.5\n",
-      "Student name: Selman\n",
-      "Studend ID:83029\n",
-      "Grades: [4, 3, 6, 9, 7]\n",
-      "GPA: 5.8\n"
+      "\n",
+      "Student name: Loete\n",
+      "Studend ID:55736\n",
+      "Grades: [5, 6, 44]\n",
+      "GPA: 18.3\n",
+      "\n",
+      "The grade must be integer\n",
+      "Student name: Loete\n",
+      "Studend ID:55736\n",
+      "Grades: [5, 6, 44]\n",
+      "GPA: 18.3\n",
+      "\n",
+      "Student name: Loete\n",
+      "Studend ID:55736\n",
+      "Grades: [5, 6, 44, 6]\n",
+      "GPA: 15.2\n",
+      "\n",
+      "Student name: Loete\n",
+      "Studend ID:55736\n",
+      "Grades: [5, 6, 44, 6, 5]\n",
+      "GPA: 13.2\n",
+      "\n"
      ]
     }
    ],
@@ -424,15 +459,24 @@
     "\n",
     "\n",
     "    def enter_grades(self):\n",
-    "        \n",
+    "         \n",
     "        grade = int(input(f\"Please enter the result of exam \"))\n",
-    "        self.grades.append(grade)\n",
+    "        if grade < 0:\n",
+    "            print(\"The grade must to be a positive integer.\")\n",
+    "        elif grade > 10:\n",
+    "            print(\"The grade cannot be bigger than 10.\")\n",
+    "        else:        \n",
+    "            self.grades.append(grade)\n",
+    "            print(\"The grade must be integer\")\n",
     "        \n",
     "\n",
     "\n",
     "    def average(self):\n",
-    "                    \n",
-    "        self.average_grades = round((sum(self.grades))/(len(self.grades)),1)\n",
+    "\n",
+    "        if len(self.grades) == 0:\n",
+    "            self.average_grades = None\n",
+    "        else:                    \n",
+    "            self.average_grades = round((sum(self.grades))/(len(self.grades)),1)\n",
     "\n",
     "\n",
     "\n",
@@ -455,11 +499,26 @@
     "print(selman)\n",
     "\n",
     "\n",
-    "#loete = Student(\"Loete\")\n",
-    "#loete.generate_id()\n",
-    "#loete.enter_grades()\n",
-    "#loete.average()\n",
-    "#print(loete)\n",
+    "loete = Student(\"Loete\")\n",
+    "loete.generate_id()\n",
+    "loete.enter_grades()\n",
+    "loete.average()\n",
+    "print(loete)\n",
+    "loete.enter_grades()\n",
+    "loete.average()\n",
+    "print(loete)\n",
+    "loete.enter_grades()\n",
+    "loete.average()\n",
+    "print(loete)\n",
+    "loete.enter_grades()\n",
+    "loete.average()\n",
+    "print(loete)\n",
+    "loete.enter_grades()\n",
+    "loete.average()\n",
+    "print(loete)\n",
+    "loete.enter_grades()\n",
+    "loete.average()\n",
+    "print(loete)\n",
     "\n",
     "#karl = Student(\"Karl\")\n",
     "#karl.generate_id()\n",
