--- a/oops.ipynb
+++ b/oops.ipynb
@@ -367,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 119,
    "id": "f8d66ed8",
    "metadata": {},
    "outputs": [
@@ -376,60 +376,59 @@
      "output_type": "stream",
      "text": [
       "Student name: Selman\n",
-      "Studend ID:28376\n",
+      "Studend ID:31302\n",
       "Grades: [4]\n",
       "GPA: 4.0\n",
       "\n",
       "Student name: Selman\n",
-      "Studend ID:28376\n",
-      "Grades: [4, 4]\n",
-      "GPA: 4.0\n",
+      "Studend ID:31302\n",
+      "Grades: [4, 3]\n",
+      "GPA: 3.5\n",
       "\n",
       "Student name: Selman\n",
-      "Studend ID:28376\n",
-      "Grades: [4, 4, 7]\n",
-      "GPA: 5.0\n",
+      "Studend ID:31302\n",
+      "Grades: [4, 3, 4]\n",
+      "GPA: 3.7\n",
       "\n",
       "Student name: Selman\n",
-      "Studend ID:28376\n",
-      "Grades: [4, 4, 7, 6]\n",
-      "GPA: 5.2\n",
+      "Studend ID:31302\n",
+      "Grades: [4, 3, 4, 7]\n",
+      "GPA: 4.5\n",
       "\n",
       "Student name: Selman\n",
-      "Studend ID:28376\n",
-      "Grades: [4, 4, 7, 6, 7]\n",
-      "GPA: 5.6\n",
+      "Studend ID:31302\n",
+      "Grades: [4, 3, 4, 7, 5]\n",
+      "GPA: 4.6\n",
       "\n",
       "Student name: Loete\n",
-      "Studend ID:55736\n",
-      "Grades: [5]\n",
-      "GPA: 5.0\n",
+      "Studend ID:48585\n",
+      "Grades: [6]\n",
+      "GPA: 6.0\n",
       "\n",
       "Student name: Loete\n",
-      "Studend ID:55736\n",
-      "Grades: [5, 6]\n",
+      "Studend ID:48585\n",
+      "Grades: [6, 5]\n",
       "GPA: 5.5\n",
       "\n",
       "Student name: Loete\n",
-      "Studend ID:55736\n",
-      "Grades: [5, 6, 44]\n",
-      "GPA: 18.3\n",
-      "\n",
-      "The grade must be integer\n",
-      "Student name: Loete\n",
-      "Studend ID:55736\n",
-      "Grades: [5, 6, 44]\n",
-      "GPA: 18.3\n",
+      "Studend ID:48585\n",
+      "Grades: [6, 5, 5]\n",
+      "GPA: 5.3\n",
       "\n",
       "Student name: Loete\n",
-      "Studend ID:55736\n",
-      "Grades: [5, 6, 44, 6]\n",
-      "GPA: 15.2\n",
+      "Studend ID:48585\n",
+      "Grades: [6, 5, 5, 7]\n",
+      "GPA: 5.8\n",
       "\n",
       "Student name: Loete\n",
-      "Studend ID:55736\n",
-      "Grades: [5, 6, 44, 6, 5]\n",
-      "GPA: 13.2\n",
+      "Studend ID:48585\n",
+      "Grades: [6, 5, 5, 7, 7]\n",
+      "GPA: 6.0\n",
+      "\n",
+      "Student name: Loete\n",
+      "Studend ID:48585\n",
+      "Grades: [6, 5, 5, 7, 7, 6]\n",
+      "GPA: 6.0\n",
       "\n"
      ]
     }
@@ -459,15 +458,20 @@
     "\n",
     "\n",
     "    def enter_grades(self):\n",
-    "         \n",
-    "        grade = int(input(f\"Please enter the result of exam \"))\n",
+    "\n",
+    "        try:         \n",
+    "            grade = int(input(f\"Please enter the result of exam \"))\n",
+    "        except ValueError:\n",
+    "            print(\"The grade must to be a number\")\n",
+    "\n",
+    "\n",
+    "\n",
     "        if grade < 0:\n",
     "            print(\"The grade must to be a positive integer.\")\n",
     "        elif grade > 10:\n",
     "            print(\"The grade cannot be bigger than 10.\")\n",
     "        else:        \n",
     "            self.grades.append(grade)\n",
-    "            print(\"The grade must be integer\")\n",
     "        \n",
     "\n",
     "\n",
