--- a/strings.ipynb
+++ b/strings.ipynb
@@ -359,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "6bc6b903",
    "metadata": {},
    "outputs": [
@@ -367,18 +367,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "letter 'A' is not present in the second string\n",
-      "letter 'n' is not present in the second string\n",
-      "letter 'n' is not present in the second string\n",
-      "letter 'y' is not present in the second string\n",
+      "letter 'A': not present in 'checks' list\n",
+      "letter 'n': not present in 'checks' list\n",
+      "letter 'n': not present in 'checks' list\n",
+      "letter 'y': not present in 'checks' list\n",
       "\n",
       "\n",
-      "letter 'H' is not present in the second string\n",
-      "letter 'n' is not present in the second string\n",
-      "letter 'a' is not present in the second string\n",
-      "letter 'n' is not present in the second string\n",
-      "letter 'd' is not present in the second string\n",
-      "letter 'z' is not present in the second string\n"
+      "letter 'H': not present in 'checks' list\n",
+      "letter 'n': not present in 'checks' list\n",
+      "letter 'a': not present in 'checks' list\n",
+      "letter 'n': not present in 'checks' list\n",
+      "letter 'd': not present in 'checks' list\n",
+      "letter 'z': not present in 'checks' list\n"
      ]
     }
    ],
@@ -386,20 +386,18 @@
     "def check_char(str_1, str_2)->None:\n",
     "\n",
     "    for char in str_1:\n",
-    "        if char.lower() not in str_2:\n",
-    "            print(f\"letter '{char}' is not present in the second string\")  \n",
-    "\n",
-    "              \n",
+    "        if char.lower() not in str_2.lower():\n",
+    "            print(f\"letter '{char}': not present in 'checks' list\")                \n",
     "        \n",
     "\n",
     "# testing\n",
-    "name = \"Antony\"\n",
-    "surname = \"Hernandez\"\n",
+    "name_1 = \"Antony\"\n",
+    "name_2 = \"Hernandez\"\n",
     "checks = \"mix_of_letters\"\n",
     "\n",
-    "check_char(name, checks)\n",
+    "check_char(name_1, checks)\n",
     "print(\"\\n\")\n",
-    "check_char(surname,checks)"
+    "check_char(name_2,checks)"
    ]
   },
   {
