--- a/strings.ipynb
+++ b/strings.ipynb
@@ -359,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 24,
    "id": "6bc6b903",
    "metadata": {},
    "outputs": [
@@ -410,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 31,
    "id": "40686023",
    "metadata": {},
    "outputs": [
@@ -418,7 +418,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The word 'the' occured 6 times.\n"
+      "The word 'in' occured 3 times.\n"
      ]
     }
    ],
@@ -426,7 +426,7 @@
     "sentence = \"The table in the kitchen and the piano in the living room are piece of the old owner of the house.\"\n",
     "\n",
     "# Find how many time \"the\" occur.\n",
-    "searched = \"the\"\n",
+    "searched = \"in\"\n",
     "\n",
     "finding_the = sentence.lower().count(searched.lower())\n",
     "\n",
@@ -435,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 32,
    "id": "c0e2ca5f",
    "metadata": {},
    "outputs": [
@@ -443,7 +443,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The word 'the' occured 6 times.\n"
+      "The word 'in' occured 2 times.\n"
      ]
     }
    ],
@@ -451,7 +451,7 @@
     "sentence = \"The table in the kitchen and the piano in the living room are piece of the old owner of the house.\"\n",
     "\n",
     "# Find how many time \"the\" occur.\n",
-    "searched = \"the\"\n",
+    "searched = \"in\"\n",
     "counter = 0\n",
     "words_in_sentence = sentence.lower().split()\n",
     "\n",
