--- a/lists.ipynb
+++ b/lists.ipynb
@@ -634,6 +634,50 @@
     "\n",
     "print(list_mix)   "
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7c730378",
+   "metadata": {},
+   "source": [
+    "##### 18. Take an input of integers separated by comma from the user and create a list of integers out of it.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "7c44571c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5, 6, 7, 8, 9]\n"
+     ]
+    }
+   ],
+   "source": [
+    "numbers = input(\"Give a serie of integer numbers separeted by comma.\")\n",
+    "\n",
+    "list_of_numbers = []\n",
+    "\n",
+    "for char in numbers:\n",
+    "    if char == ',':\n",
+    "        continue\n",
+    "    else:\n",
+    "        list_of_numbers.append(int(char))\n",
+    "\n",
+    "print(list_of_numbers)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1479246e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
