--- a/lists.ipynb
+++ b/lists.ipynb
@@ -672,9 +672,60 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "2c162da3",
+   "metadata": {},
+   "source": [
+    "##### 19. Write a program to find the Union and Intersection of two lists."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "1479246e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[4, 5, 6, 7]\n",
+      "[1, 2, 3, 4, 5, 6, 7, 8, 9, 10]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def intersection(list_1, list_2):\n",
+    "\n",
+    "    intersection = []\n",
+    "    for num in list_1:\n",
+    "        if num in list_2:\n",
+    "            intersection.append(num)\n",
+    "    return intersection\n",
+    "\n",
+    "def union(list_1, list_2):\n",
+    "\n",
+    "    union = []\n",
+    "    for elements in list_1:\n",
+    "            union.append(elements)\n",
+    "\n",
+    "    for num in list_2:\n",
+    "        if num not in list_1:\n",
+    "            union.append(num)\n",
+    "    \n",
+    "    return union\n",
+    "\n",
+    "first = [1, 2, 3, 4, 5, 6, 7]\n",
+    "second = [4, 5, 6, 7, 8, 9, 10]\n",
+    "\n",
+    "print(intersection(first,second))\n",
+    "print(union(first,second))"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1479246e",
+   "id": "5b1c0fc5",
    "metadata": {},
    "outputs": [],
    "source": []
