--- a/lists.ipynb
+++ b/lists.ipynb
@@ -723,9 +723,83 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ec760691",
+   "metadata": {},
+   "source": [
+    "##### 20. Write a Python program to find the first never-repeated element in a the whole list."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "5b1c0fc5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1: 1, 2: 1, 3: 1, 4: 1, 5: 1, 6: 1, 7: 1, 8: 1}\n",
+      "First non-repeated element in the said list:\n",
+      "1\n",
+      "\n",
+      "{1: 2, 2: 2, 3: 1, 4: 1, 5: 1, 6: 1, 7: 1, 8: 1}\n",
+      "Second non-repeated element in the said list:\n",
+      "3\n",
+      "\n",
+      "{1: 3, 2: 2, 3: 2, 8: 2}\n",
+      "Third non-repeated element in the said list:\n",
+      "None\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "def not_repeated(random_number:list[int])-> int:\n",
+    "\n",
+    "    dict_numbers = {}\n",
+    "\n",
+    "    for num in random_number:\n",
+    "        if num not in dict_numbers:\n",
+    "            dict_numbers[num] = 1\n",
+    "        else:\n",
+    "            dict_numbers[num] += 1\n",
+    "\n",
+    "    print(dict_numbers)\n",
+    "\n",
+    "    for key, value in dict_numbers.items():\n",
+    "        if value == 1:\n",
+    "            return key \n",
+    "       \n",
+    "\n",
+    "\n",
+    "# First \n",
+    "nums_1 =  [1, 2, 3, 4, 5, 6, 7, 8]\n",
+    "\n",
+    "result = not_repeated(nums_1)\n",
+    "print(\"First non-repeated element in the said list:\")\n",
+    "print(f\"{result}\\n\")\n",
+    "\n",
+    "# Second\n",
+    "nums_2 =  [1, 2, 3, 1, 2, 4, 5, 6, 7, 8]\n",
+    "\n",
+    "result = not_repeated(nums_2)\n",
+    "print(\"Second non-repeated element in the said list:\")\n",
+    "print(f\"{result}\\n\")\n",
+    "\n",
+    "#Third\n",
+    "nums_3 =  [1, 1, 2, 3, 1, 2, 3, 8, 8]\n",
+    "\n",
+    "result = not_repeated(nums_3)\n",
+    "print(\"Third non-repeated element in the said list:\")\n",
+    "print(f\"{result}\\n\")\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5b1c0fc5",
+   "id": "cdb70048",
    "metadata": {},
    "outputs": [],
    "source": []
