--- a/dictionaries.ipynb
+++ b/dictionaries.ipynb
@@ -383,9 +383,60 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "60f53af6",
+   "metadata": {},
+   "source": [
+    "##### 11. Implement a reverse lookup function that takes a dictionary and a value, and returns the first key that corresponds to that value."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "5f317348",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "'c' is the first value of 3 found.\n"
+     ]
+    },
+    {
+     "ename": "LookupError",
+     "evalue": "Value of '5' not found.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mLookupError\u001b[0m                               Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[23], line 13\u001b[0m\n\u001b[0;32m     10\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mLookupError\u001b[39;00m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mValue of \u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mval\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m not found.\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m     12\u001b[0m \u001b[38;5;28mprint\u001b[39m(reverse_lookup(my_dict,val_1))\n\u001b[1;32m---> 13\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[43mreverse_lookup\u001b[49m\u001b[43m(\u001b[49m\u001b[43mmy_dict\u001b[49m\u001b[43m,\u001b[49m\u001b[43mval_2\u001b[49m\u001b[43m)\u001b[49m)\n",
+      "Cell \u001b[1;32mIn[23], line 10\u001b[0m, in \u001b[0;36mreverse_lookup\u001b[1;34m(straight, val)\u001b[0m\n\u001b[0;32m      8\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m straight[key] \u001b[38;5;241m==\u001b[39m val:\n\u001b[0;32m      9\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mkey\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m is the first value of \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mval\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m found.\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m---> 10\u001b[0m \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mLookupError\u001b[39;00m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mValue of \u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mval\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m not found.\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "\u001b[1;31mLookupError\u001b[0m: Value of '5' not found."
+     ]
+    }
+   ],
+   "source": [
+    "my_dict = {'a': 1, 'b': 2, 'c': 3, 'd': 2}\n",
+    "val_1 = 3\n",
+    "val_2 = 5\n",
+    "\n",
+    "def reverse_lookup(straight:dict, val:int):\n",
+    "    \n",
+    "    for key in straight:\n",
+    "        if straight[key] == val:\n",
+    "            return f\"'{key}' is the first value of {val} found.\"\n",
+    "    raise LookupError(f\"Value of '{val}' not found.\")\n",
+    "    \n",
+    "print(reverse_lookup(my_dict,val_1))\n",
+    "print(reverse_lookup(my_dict,val_2))\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5f317348",
+   "id": "9e6ede2c",
    "metadata": {},
    "outputs": [],
    "source": []
