--- a/dictionaries.ipynb
+++ b/dictionaries.ipynb
@@ -392,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 27,
    "id": "5f317348",
    "metadata": {},
    "outputs": [
@@ -405,14 +405,14 @@
     },
     {
      "ename": "LookupError",
-     "evalue": "Value of '5' not found.",
+     "evalue": ">>> Value of '5' not found <<<",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mLookupError\u001b[0m                               Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[23], line 13\u001b[0m\n\u001b[0;32m     10\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mLookupError\u001b[39;00m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mValue of \u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mval\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m not found.\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m     12\u001b[0m \u001b[38;5;28mprint\u001b[39m(reverse_lookup(my_dict,val_1))\n\u001b[1;32m---> 13\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[43mreverse_lookup\u001b[49m\u001b[43m(\u001b[49m\u001b[43mmy_dict\u001b[49m\u001b[43m,\u001b[49m\u001b[43mval_2\u001b[49m\u001b[43m)\u001b[49m)\n",
-      "Cell \u001b[1;32mIn[23], line 10\u001b[0m, in \u001b[0;36mreverse_lookup\u001b[1;34m(straight, val)\u001b[0m\n\u001b[0;32m      8\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m straight[key] \u001b[38;5;241m==\u001b[39m val:\n\u001b[0;32m      9\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mkey\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m is the first value of \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mval\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m found.\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m---> 10\u001b[0m \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mLookupError\u001b[39;00m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mValue of \u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mval\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m not found.\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
-      "\u001b[1;31mLookupError\u001b[0m: Value of '5' not found."
+      "Cell \u001b[1;32mIn[27], line 13\u001b[0m\n\u001b[0;32m     10\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mLookupError\u001b[39;00m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m>>> Value of \u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mval\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m not found <<<\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m     12\u001b[0m \u001b[38;5;28mprint\u001b[39m(reverse_lookup(my_dict,val_1))\n\u001b[1;32m---> 13\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[43mreverse_lookup\u001b[49m\u001b[43m(\u001b[49m\u001b[43mmy_dict\u001b[49m\u001b[43m,\u001b[49m\u001b[43mval_2\u001b[49m\u001b[43m)\u001b[49m)\n",
+      "Cell \u001b[1;32mIn[27], line 10\u001b[0m, in \u001b[0;36mreverse_lookup\u001b[1;34m(straight, val)\u001b[0m\n\u001b[0;32m      8\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m straight[key] \u001b[38;5;241m==\u001b[39m val:\n\u001b[0;32m      9\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mkey\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m is the first value of \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mval\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m found.\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m---> 10\u001b[0m \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mLookupError\u001b[39;00m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m>>> Value of \u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mval\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m not found <<<\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "\u001b[1;31mLookupError\u001b[0m: >>> Value of '5' not found <<<"
      ]
     }
    ],
@@ -426,7 +426,7 @@
     "    for key in straight:\n",
     "        if straight[key] == val:\n",
     "            return f\"'{key}' is the first value of {val} found.\"\n",
-    "    raise LookupError(f\"Value of '{val}' not found.\")\n",
+    "    raise LookupError(f\">>> Value of '{val}' not found <<<\")\n",
     "    \n",
     "print(reverse_lookup(my_dict,val_1))\n",
     "print(reverse_lookup(my_dict,val_2))\n",
@@ -434,9 +434,58 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "506aa684",
+   "metadata": {},
+   "source": [
+    "##### 12. A dictionary have for different keys, same values. Create a new dictionary that groups keys by their values."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "9e6ede2c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fruits in the storage:\n",
+      "{20: ['apple', 'cherry', 'lemon', 'papaya'], 30: ['banana', 'elderberry', 'nectarine'], 40: ['date', 'grape'], 50: ['fig', 'kiwi', 'orange', 'quince'], 60: ['honeydew', 'mango']}\n",
+      "\n",
+      "\n",
+      "About the shop:\n",
+      "{'Client': ['Adams', 'Baker', 'Davis'], 'Director': ['Frank'], 'Manager': ['Peter'], 'Supplier': ['Nichols', 'Carter', 'Evans'], 'Supervisor': ['Owen', 'Bill']}\n"
+     ]
+    }
+   ],
+   "source": [
+    "def invert_key_value(base_dict: dict)-> dict:\n",
+    "\n",
+    "    value_key_dict = {}\n",
+    "    for key in base_dict:        \n",
+    "        if base_dict[key] not in value_key_dict:\n",
+    "            value_key_dict[base_dict[key]] = [key]\n",
+    "        else:\n",
+    "            value_key_dict[base_dict[key]].append(key)\n",
+    "\n",
+    "    return value_key_dict\n",
+    "\n",
+    "base_dict_1 = {'apple': 20, 'banana': 30, 'cherry': 20, 'date': 40, 'elderberry': 30, 'fig': 50, 'grape': 40, 'honeydew': 60, 'kiwi': 50, 'lemon': 20, 'mango': 60, 'nectarine': 30, 'orange': 50, 'papaya': 20, 'quince': 50}\n",
+    "inventory = invert_key_value(base_dict_1)\n",
+    "print(f\"Fruits in the storage:\\n{inventory}\")\n",
+    "print(f\"\\n\")\n",
+    "\n",
+    "base_dict_2 = { \"Adams\": \"Client\", \"Frank\": \"Director\", \"Peter\": \"Manager\", \"Nichols\": \"Supplier\", \"Owen\": \"Supervisor\", \"Bill\" : \"Supervisor\", \"Baker\": \"Client\", \"Carter\": \"Supplier\", \"Davis\": \"Client\", \"Evans\": \"Supplier\"}\n",
+    "draft_database = invert_key_value(base_dict_2)\n",
+    "print(f\"About the shop:\\n{draft_database}\")"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9e6ede2c",
+   "id": "d5c9927c",
    "metadata": {},
    "outputs": [],
    "source": []
