--- a/dictionaries.ipynb
+++ b/dictionaries.ipynb
@@ -492,90 +492,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 59,
    "id": "d5c9927c",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "('This', 1)\n",
-      "('shutdown,', 1)\n",
-      "('which', 1)\n",
-      "('began', 1)\n",
-      "('on', 2)\n",
-      "('1', 1)\n",
-      "('October,', 1)\n",
-      "('has', 1)\n",
-      "('caused', 1)\n",
-      "('unprecedented', 1)\n",
-      "('disruptions', 2)\n",
-      "('in', 4)\n",
-      "('the', 4)\n",
-      "('country.', 1)\n",
-      "('Food', 1)\n",
-      "('aid', 1)\n",
-      "('programmes', 1)\n",
-      "('have', 2)\n",
-      "('been', 1)\n",
-      "('paused,', 1)\n",
-      "('hundreds', 1)\n",
-      "('of', 1)\n",
-      "('federal', 2)\n",
-      "('workers', 1)\n",
-      "('remain', 1)\n",
-      "('unpaid,', 1)\n",
-      "('and', 1)\n",
-      "('there', 1)\n",
-      "('are', 1)\n",
-      "('huge', 1)\n",
-      "('flight', 1)\n",
-      "('at', 1)\n",
-      "('major', 2)\n",
-      "('airports', 1)\n",
-      "('like', 1)\n",
-      "('here', 1)\n",
-      "('DC.', 1)\n",
-      "('For', 1)\n",
-      "('weeks,', 1)\n",
-      "('Democrats', 1)\n",
-      "('refused', 1)\n",
-      "('to', 4)\n",
-      "('vote', 1)\n",
-      "('reopen', 1)\n",
-      "('government', 1)\n",
-      "('without', 1)\n",
-      "('investments', 1)\n",
-      "('reducing', 1)\n",
-      "('health', 2)\n",
-      "('care', 2)\n",
-      "('costs.', 1)\n",
-      "('The', 1)\n",
-      "('revised', 1)\n",
-      "('bill', 1)\n",
-      "('put', 1)\n",
-      "('forward', 1)\n",
-      "('will', 1)\n",
-      "('likely', 1)\n",
-      "('keep', 1)\n",
-      "(\"government's\", 1)\n",
-      "('lights', 1)\n",
-      "('past', 1)\n",
-      "('Thanksgiving.', 1)\n",
-      "('But', 1)\n",
-      "('if', 1)\n",
-      "('significant', 1)\n",
-      "('changes', 1)\n",
-      "('arenâ€™t', 1)\n",
-      "('bill,', 1)\n",
-      "('itâ€™s', 1)\n",
-      "('unlikely', 1)\n",
-      "('pass.File', 1)\n",
-      "('APPENDED', 1)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def words_frequency(text:str)-> dict:\n",
     "\n",
@@ -594,10 +514,16 @@
     "\n",
     "\n",
     "\n",
-    "word_dict = words_frequency(r\"C:\\Users\\zanca\\OneDrive\\Desktop\\sample.txt\")\n",
-    "for item in word_dict.items():\n",
-    "    print(item)"
+    "#word_dict = words_frequency(r\"C:\\Users\\zanca\\OneDrive\\Desktop\\sample.txt\")\n",
+    "#for item in word_dict.items():\n",
+    "#    print(item)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "14a73f9b",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "code",
